2019-1/221/users/4304/executions/1818_2566.log
== SUBMITION (2019-06-11 09:41:24) 
-- CODE:
from numpy import*

f= array(eval(input()))
t= size(faltas)
saida= zeros(6, dtype = float)

for i in f:
	saida[i-2]= saida[i-2]+1
	
saida=(saida*100)/total
print(around(saida,1))
-- EXECUTION TIME:
0.953218
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1818/2566/main.py", line 4, in <module>
    t= size(faltas)
NameError: name 'faltas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 09:42:22) 
-- CODE:
from numpy import*
faltas= array(eval(input()))
total= size(faltas)
saida= zeros(6, dtype = float)

for i in f:
	saida[i-2]= saida[i-2]+1
	
saida=(saida*100)/total
print(around(saida,1))
-- EXECUTION TIME:
1.14952
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1818/2566/main.py", line 6, in <module>
    for i in f:
NameError: name 'f' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 09:42:36) 
-- CODE:
from numpy import*
faltas= array(eval(input()))
total= size(faltas)
saida= zeros(6, dtype = float)

for i in faltas:
	saida[i-2]= saida[i-2]+1
	
saida=(saida*100)/total
print(around(saida,1))
-- EXECUTION TIME:
1.08223
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
